Add .resources to ignote

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,7 @@
 # Created by .ignore support plugin (hsz.mobi)
+# Custom
+.resources
+
 ### Windows template
 # Windows thumbnail cache files
 Thumbs.db
